SigmaCodebackup3rdSep/objects/Payment_Request_Response_PayPal__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Request Response PayPals</relationshipLabel>
        <relationshipName>Payment_Request_Response_PayPals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Request Response PayPals (Parent Account)</relationshipLabel>
        <relationshipName>Payment_Request_Response_PayPals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_RequestTime__c</fullName>
        <label>Payment RequestTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_ResponseTime__c</fullName>
        <label>Payment ResponseTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QSCompanyID__c</fullName>
        <label>QSCompanyID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Token_EndTime__c</fullName>
        <label>Token_EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Token_StartTime__c</fullName>
        <label>Token_StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Token_Status__c</fullName>
        <label>Token Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment Request Response PayPal</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Payment Request Response PayPal No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request Response PayPals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>